crates/flowlog-build/tests/errors/parser/loop_in_standard_mode.dl
.decl edge(x: number, y: number)
.output edge
fixpoint { edge(X, Y) :- edge(X, Y). }
